# cc-beats

./: .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
cc_beats/: __init__.py  scraper.py
src/: main.py  scraper.py
src/templates/: obs-card.html
