[tool.poetry]
name = "cc-beats"
version = "0.1.0"
description = "Rest Api Paired with Web Scraper for fetching NCS Releases"
authors = ["Harish <dev.harish3124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
flask = "^2.3.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
